# speech-clerk

./: .gitignore  .swift-format  .swiftlint.yml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  bacon.toml  deny.toml  taplo.toml
.github/workflows/: ci.yml  release-artifacts.yml
apps/android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/app/speechclerk/android/: AndroidDictationBridge.kt  AudioRecordCapture.kt  LanguageTags.kt  ModelPackStore.kt  PermissionActivity.kt  SpeechClerkImeService.kt
apps/android/app/src/main/java/app/speechclerk/ffi/: speech_clerk.kt
apps/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
apps/android/app/src/main/res/xml/: method.xml
apps/android/config/detekt/: detekt.yml
apps/macos/: Info.plist  Package.swift  README.md
apps/macos/Sources/SpeechClerkMac/: AudioCapture.swift  ClipboardInserter.swift  ContentView.swift  DictationViewModel.swift  ModelPackCatalog.swift  RustDictationBridge.swift  SpeechClerkMacApp.swift
apps/macos/Sources/SpeechClerkMac/Resources/ModelPacks/fake-local/: fake_asr.txt
apps/macos/Sources/SpeechClerkMacSupport/: ModelPackCatalog.swift
apps/macos/Sources/SpeechClerkMacSupport/Resources/ModelPacks/fake-local/: manifest.json
apps/macos/Tests/SpeechClerkMacTests/: ModelPackCatalogTests.swift
apps/macos/Tools/SpeechClerkMacUITool/: main.swift
crates/asr-api/: Cargo.toml
crates/asr-api/src/: lib.rs
crates/asr-onnx/: Cargo.toml
crates/asr-onnx/src/: lib.rs
crates/audio-pipeline/: Cargo.toml
crates/audio-pipeline/src/: lib.rs
crates/dictation-core/: Cargo.toml
crates/dictation-core/src/: lib.rs
crates/ffi/: Cargo.toml  build.rs  uniffi.toml
crates/ffi/src/: lib.rs  speech_clerk.udl
crates/model-pack/: Cargo.toml
crates/model-pack/src/: lib.rs
crates/postprocess/: Cargo.toml
crates/postprocess/src/: lib.rs
docs/: ANDROID_IME_TESTING.md  CI_CD_RELEASES.md  DDD_GUIDE.md  MACOS_AGENT_TESTING.md  MACOS_APP_ACCESS.md  MACOS_E2E_TESTING.md  RELEASE_CANDIDATE.md  ROADMAP.md  SWIFT_GUIDE.md  TECHNICAL_ARCHITECTURE.md
tools/: macos-agent.sh  macos-e2e.sh  macos-ui.sh  package-macos.sh
tools/dictation-bench/: Cargo.toml
tools/dictation-bench/src/: main.rs
tools/model-packager/: Cargo.toml
tools/model-packager/src/: main.rs
