[package]
name = "asr-onnx"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
asr-api = { path = "../asr-api" }
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["load-dynamic"] }
ort-sys = "=2.0.0-rc.9"
serde_json = "1.0.150"
tracing = { version = "0.1.44", default-features = false }

[lints]
workspace = true
