[package]
name = "dictation-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
asr-api = { path = "../asr-api" }
audio-pipeline = { path = "../audio-pipeline" }
model-pack = { path = "../model-pack" }
postprocess = { path = "../postprocess" }
tracing = { version = "0.1.44", default-features = false }

[lints]
workspace = true
